fitness tests implemented