@@ -1,56 +1,98 @@
 package hotel.dao;
 
 import hotel.model.Gosc;
-import java.util.*;
-import java.util.stream.Collectors;
+
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 /**
- * DAO dla gości.
+ * Implementacja DAO dla encji Gosc.
+ * Przechowuje dane w pamięci (symulacja bazy danych).
  */
-public class GoscieDAO implements IDAO<Gosc> {
-    private final Map<Integer, Gosc> goscie = new HashMap<>();
-    private int nastepneId = 1;
+public class GoscieDAO implements IDAO<Gosc, Integer> {
+    
+    private final Map<Integer, Gosc> storage = new HashMap<>();
     
     @Override
-    public Gosc pobierz(int id) { return goscie.get(id); }
-    
-    @Override
-    public void zapisz(Gosc gosc) {
-        if (gosc == null) return;
-        goscie.put(gosc.getId(), gosc);
-        if (gosc.getId() >= nastepneId) nastepneId = gosc.getId() + 1;
+    public Optional<Gosc> pobierz(Integer id) {
+        return Optional.ofNullable(storage.get(id));
     }
     
     @Override
-    public boolean usun(int id) { return goscie.remove(id) != null; }
-    
-    @Override
-    public List<Gosc> pobierzWszystkie() { return new ArrayList<>(goscie.values()); }
-    
-    @Override
-    public void aktualizuj(Gosc gosc) {
-        if (gosc != null && goscie.containsKey(gosc.getId())) {
-            goscie.put(gosc.getId(), gosc);
+    public Gosc zapisz(Gosc gosc) {
+        if (gosc == null) {
+            throw new IllegalArgumentException("Gość nie może być null");
         }
+        storage.put(gosc.getId(), gosc);
+        return gosc;
     }
     
-    public Gosc znajdzPoEmail(String email) {
-        return goscie.values().stream()
+    @Override
+    public boolean usun(Integer id) {
+        return storage.remove(id) != null;
+    }
+    
+    @Override
+    public List<Gosc> pobierzWszystkie() {
+        return new ArrayList<>(storage.values());
+    }
+    
+    @Override
+    public boolean aktualizuj(Gosc gosc) {
+        if (gosc == null || !storage.containsKey(gosc.getId())) {
+            return false;
+        }
+        storage.put(gosc.getId(), gosc);
+        return true;
+    }
+    
+    /**
+     * Wyszukuje gościa po adresie email.
+     * @param email adres email
+     * @return Optional z gościem lub pusty
+     */
+    public Optional<Gosc> znajdzPoEmail(String email) {
+        return storage.values().stream()
                 .filter(g -> g.getEmail().equalsIgnoreCase(email))
-                .findFirst().orElse(null);
+                .findFirst();
     }
     
+    /**
+     * Wyszukuje gości po nazwisku.
+     * @param nazwisko nazwisko do wyszukania
+     * @return lista gości o podanym nazwisku
+     */
     public List<Gosc> znajdzPoNazwisku(String nazwisko) {
-        return goscie.values().stream()
+        return storage.values().stream()
                 .filter(g -> g.getNazwisko().equalsIgnoreCase(nazwisko))
-                .collect(Collectors.toList());
+                .toList();
     }
     
-    public int liczbaGosci() { return goscie.size(); }
+    /**
+     * Sprawdza czy istnieje gość o podanym emailu.
+     * @param email adres email
+     * @return true jeśli istnieje
+     */
+    public boolean istniejeEmail(String email) {
+        return storage.values().stream()
+                .anyMatch(g -> g.getEmail().equalsIgnoreCase(email));
+    }
     
-    public void wyczyscWszystko() {
-        goscie.clear();
-        nastepneId = 1;
+    /**
+     * Czyści całą bazę (używane w testach).
+     */
+    public void wyczysc() {
+        storage.clear();
+    }
+    
+    /**
+     * Zwraca liczbę zapisanych gości.
+     * @return liczba gości
+     */
+    public int liczba() {
+        return storage.size();
     }
 }
-
